<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#c1c8ce"
        android:orientation="vertical"
        android:weightSum="30">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="13"
            android:background="#c1c8ce"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/headerTextAanvraag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:text="De Sleutelaar"
                    android:textColor="#0012b1"
                    android:textSize="40dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:background="@mipmap/sleutelaar_logo" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/SlotenTextViewSlotenAanvraag"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="16dp"
                    android:text="Sloten"
                    android:textColor="#010000"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/slotenInfoAanvraag"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:text="SlotenInfo"
                    android:textColor="#010000"
                    android:textSize="22dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/persoonlijkeGegevens"
                    android:textColor="#010000"
                    android:textSize="22dp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/nameText"
                        android:textColor="#010000" />

                    <EditText
                        android:id="@+id/naamEdit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/phoneNumberText"
                        android:textColor="#010000" />

                    <EditText
                        android:id="@+id/telEdit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/addressText"
                        android:textColor="#010000" />

                    <EditText
                        android:id="@+id/adresEdit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/emailText"
                        android:textColor="#010000" />

                    <EditText
                        android:id="@+id/mailEdit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="13"
            android:background="#ff0fff"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/backButtonAanvraag"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:background="#0000cc"
                android:onClick="prevPage"
                android:text="Annuleren"
                android:textColor="#ffffffff"
                android:textSize="18dp" />

            <Button
                android:id="@+id/aanvraagButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:background="#0000cc"
                android:onClick="aanvraag"
                android:text="Bestellen"
                android:textColor="#ffffffff"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
